[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/pistola.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Pistola.gd" type="Script" id=3]
[ext_resource path="res://sprites/player.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Pistola2.gd" type="Script" id=5]
[ext_resource path="res://sprites/pistola2.png" type="Texture" id=6]
[ext_resource path="res://sons/tiro.wav" type="AudioStream" id=7]
[ext_resource path="res://sons/AQUELA_inicio.wav" type="AudioStream" id=8]
[ext_resource path="res://sons/machuquei.wav" type="AudioStream" id=9]
[ext_resource path="res://sons/power.wav" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "stop",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 27.3753, 29.25 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 33.6186, 35.4491 )

[sub_resource type="Animation" id=9]
resource_name = "dano"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="SpritePlayer" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "stop"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.5 )
shape = SubResource( 7 )

[node name="Label" type="Label" parent="."]
margin_left = 37.4577
margin_top = -29.9662
margin_right = 77.4577
margin_bottom = -15.9662
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armas" type="Node2D" parent="."]

[node name="Pistola" type="Sprite" parent="Armas"]
position = Vector2( 25.8377, 9.27573 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Mira" type="Position2D" parent="Armas/Pistola"]
position = Vector2( 11.169, -2.83958 )
scale = Vector2( 2.05413, 3.98522 )

[node name="Timer" type="Timer" parent="Armas/Pistola"]
wait_time = 0.2

[node name="Pistola2" type="Sprite" parent="Armas"]
visible = false
position = Vector2( 25.8377, 9.27573 )
texture = ExtResource( 6 )
script = ExtResource( 5 )

[node name="Mira" type="Position2D" parent="Armas/Pistola2"]
position = Vector2( 11.169, -2.83958 )
scale = Vector2( 2.05413, 3.98522 )

[node name="Timer" type="Timer" parent="Armas/Pistola2"]
wait_time = 0.15

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Armas"]
stream = ExtResource( 7 )

[node name="VIdaTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="detector_de_espinho" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector_de_espinho"]
position = Vector2( 0, -1.48652 )
shape = SubResource( 8 )

[node name="morreu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="dano" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/dano = SubResource( 9 )

[node name="powerUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="timeout" from="Armas/Pistola/Timer" to="Armas/Pistola" method="_on_Timer_timeout"]
[connection signal="timeout" from="Armas/Pistola2/Timer" to="Armas/Pistola2" method="_on_Timer_timeout"]
[connection signal="timeout" from="VIdaTimer" to="." method="_on_VIdaTimer_timeout"]
[connection signal="body_entered" from="detector_de_espinho" to="." method="_on_detector_de_espinho_body_entered"]
